--- a/Snake3D/Main.html
+++ b/Snake3D/Main.html
@@ -9,11 +9,18 @@
     <script src="../Fudge/FudgeCore.js"></script>
     <script src="Snake.js"></script>
     <script src="Main.js"></script>
+
+    <style>
+        canvas{
+            height: 90vh;
+            width: 100%;
+        }
+    </style>
 </head>
 
 <body>
     <h1>L05 Snake 3D Start</h1>
-    <canvas width="800" height="600"></canvas>
+    <canvas></canvas>
 </body>
 
 </html>
