--- a/Snake3D_with_collision/Main.html
+++ b/Snake3D_with_collision/Main.html
@@ -10,9 +10,19 @@
     <script src="./Main.js"></script>
 
     <style>
+        body,
+        html {
+            height: 100%;
+            margin: 0px;
+        }
+        
+        body {
+            display: flex;
+            flex-direction: column;
+        }
+        
         canvas {
-            height: 100vh;
-            width: 100%;
+            flex-grow: 1;
         }
     </style>
 </head>
