Current status Tower Defense

--- a/Tower_Defense/main.html
+++ b/Tower_Defense/main.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet">
     <script src="../FudgeCore/FudgeCore.js"></script>
     <script src="../FudgeAid/FudgeAid.js"></script>
     <script src="./TowerDefense.js"></script>
@@ -24,12 +25,23 @@
         canvas {
             flex-grow: 1;
         }
+        
+        img {
+            display: none;
+        }
+        
+        h1 {
+            font-family: Roboto;
+            padding-left: 1rem;
+            position: absolute;
+        }
     </style>
 </head>
 
 <body>
     <h1>Tower Defense</h1>
     <canvas></canvas>
+    <img src="sommai150300552.jpg">
 </body>
 
 </html>
