--- a/Tower_Defense/main.html
+++ b/Tower_Defense/main.html
@@ -26,14 +26,28 @@
             flex-grow: 1;
         }
         
-        img {
-            display: none;
-        }
-        
         h1 {
             font-family: Roboto;
             padding-left: 1rem;
             position: absolute;
+        }
+
+        .healthbar-container{
+            width: 60px;
+            background-color: #fff;
+            height: 30px;
+            position: absolute;
+            top: 300px;
+            left: 200px;
+            border: solid 2px #fff;
+        }
+
+        .healthbar-container .healthbar{
+            z-index: 100;
+            content: "Test";
+            height: 30px;
+            width: 30px;
+            background-color: red;
         }
     </style>
 </head>
@@ -41,7 +55,6 @@
 <body>
     <h1>Tower Defense</h1>
     <canvas></canvas>
-    <img src="sommai150300552.jpg">
 </body>
 
 </html>
