--- a/Real Time StrategieV1/main.html
+++ b/Real Time StrategieV1/main.html
@@ -6,7 +6,7 @@
     <title>Real Time Stragegie Game</title>
     <script src="../FudgeCore/FudgeCore.js"></script>
     <script src="../FudgeAid/FudgeAid.js"></script>
-    <script src="RealTimeStrategie.js"></script>
+    <script src="./RealTimeStrategie.js"></script>
     <style>
         body,
         html {
@@ -22,10 +22,18 @@
         canvas {
             flex-grow: 1;
         }
+
+        img{
+            display: none;
+        }
     </style>
 </head>
 <body>
     <h1>Real Time Strategie</h1>
     <canvas></canvas>
+    <img id="tankbody" src="./assets/tankBlue.png" crossorigin="anonymous">
+    <img id="tankbarrel" src="./assets/barrelGrey_up.png" crossorigin="anonymous">
+    <img id="tankcannon" src="./assets/barrelBlue_outline.png" crossorigin="anonymous">
+    <img class="background" src="./assets/dirt.png" crossorigin="anonymous">
 </body>
 </html>
