--- a/RTS V2/main.html
+++ b/RTS V2/main.html
@@ -30,7 +30,7 @@
 </head>
 <body>
     <img id="tankbullet" src="assets/bulletBlueSilver_outline.png" crossorigin="anonymous">
-    <img id="terrain" src="assets/grass.png" crossorigin="anonymous">
+    <img id="terrain" src="assets/dirt.png" crossorigin="anonymous">
     <img id="tank" src="assets/tankBlue_outline.png" crossorigin="anonymous">
     <img id="cannon" src="assets/barrelGrey_up.png" crossorigin="anonymous">
     <img id="barrel" src="assets/barrelBlue_outline.png" crossorigin="anonymous">
